# space-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: AGENT-PROTOCOL.md  DESIGN.md  SAMPLE-TRANSCRIPT.md
space_agent/: __init__.py  __main__.py
space_agent/agents/: describe.py  protocol.py  renderer.py
space_agent/game/: action.py  colony_sim.py  engine.py  entities.py  entity.py  population.py  resolver.py  state.py  turn.py
space_agent/simulation/: drones.py  planet.py  resources.py
src/: __main__.py
src/game/: state.py
tests/: test_population.py
